# chemetk

./: .gitignore  README.md  pyproject.toml
chemetk/data/nist/: nist_data_index.json
chemetk/io/: __init__.py  nist_cache.py  nist_webbook.py  vle_data_manager.py
chemetk/thermo/: fugacity.py  vle.py
chemetk/visualization/: plotting.py
chemetk/web/: app.py  layout.py
chemetk/web/assets/: style.css
examples/: 20251011-化工原理第三次作业.html  20251011-化工原理第三次作业.ipynb  20251019-化工原理第五周作业.html  20251019-化工原理第五周作业.ipynb  run_webapp.py
examples/计算二氧化碳逸度和化学势/: calculate.py
homework/化工原理(3)/: 20251011-化工原理第三次作业.ipynb  20251019-化工原理第五周作业.ipynb
homework/化工热力学/: 20250930 Homework1.html  20250930 Homework1.ipynb
homework/化工热力学/Homework3/: calculate.py
src/chemetk/: __init__.py
src/chemetk/data/: methanol_water_vle.json
src/chemetk/io/: nist_datamanager.py  paths.py  vle_datamanager.py
src/chemetk/unit_ops/: distillation.py
src/chemetk/visualization/: plotly_plotting.py
src/chemetk/web/: app.py  callbacks.py  layout.py
tests/: 20251011-化工原理第三次作业.ipynb  20251019-化工原理第五周作业.ipynb  run_webapp.py
tests/计算二氧化碳逸度和化学势/: calculate.py
